--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <p>
                     <strong>HiTech Center</strong> <small>hitechvoltaredonda</small>
                     <br>
-                    Confira nosso catálogo de celulares.
+                    Confira nosso catálogo de celulares!
                   </p>
                 </div>
                 <nav class="level is-mobile">
